--- a/styles/style.css
+++ b/styles/style.css
@@ -6,42 +6,54 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
-body{
+footer {
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
+
 .header {
   display: flex;
   height: 100%;
   min-height: 600px;
   max-height: 756px;
-  background-color:#f2f2f2;
-  position:relative; 
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  position: relative;
+
 }
-.header__link{
-  color: #2f80ed; 
- }
- .logo_place_header{
-position: absolute;
-top: 30px;
-left: 64px;
-z-index:  0;
-} 
-.header__title{
-width: 730px;
-line-height: 1;
-font-size: 102px;
-font-weight: 600;
-align-self: center;
-position: relative;
-left: 64px;
-margin: 0;
 
-
-
- }
-.header__subtitle{
+.logo {
+  width: 223px;
+  height: 32px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.logo_place_header {
+  background-image: url(../images/logo_place_header.svg);
+}
+.header__link {
+  color: #2f80ed;
+}
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 0;
+}
+.header__title {
+  width: 730px;
+  line-height: 1;
+  font-size: 102px;
+  font-weight: 600;
+  align-self: center;
+  position: relative;
+  left: 64px;
+  margin: 0;
+}
+.header__subtitle {
   position: absolute;
   max-width: 388px;
   left: 64px;
@@ -51,7 +63,7 @@ margin: 0;
   font-weight: normal;
   margin: 0;
 }
-.header__main-illustration{
+.header__main-illustration {
   position: absolute;
   right: 0;
   bottom: 0;
@@ -65,48 +77,47 @@ margin: 0;
   height: 568px;
   width: 568px;
   right: 0px;
-  /* top: 64px; */
   background-color: #2f80ed;
 }
-.description{
+.description {
   display: flex;
   justify-content: center;
-  margin-top: 100px;
+ 
   position: relative;
 }
 .two-colums {
   width: 80%;
   display: flex;
   justify-content: space-between;
-  flex-direction: column;
+  flex-direction: row;
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
-.two-colums__span-accent{
+.two-colums__span-accent {
   font-weight: 600;
   font-size: 24px;
   line-height: 34px;
   margin-bottom: 30px;
 }
-.two-colums__brief{
+.two-colums__brief {
   display: flex;
   flex-direction: column;
- width: 175px;
- color:#2F80ED;
- line-height: 1.2;
- font-size: 18px;
- font-weight: normal;
+  width: 175px;
+  color: #2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
 }
 
-.two-colums__main_text{
+.two-colums__main_text {
   width: 80%;
   min-width: 784px;
   justify-content: space-between;
   display: flex;
   flex-direction: column;
 }
-.two-colums__paragraph{
+.two-colums__paragraph {
   font-size: 24px;
   line-height: 34px;
   font-weight: normal;
@@ -121,73 +132,202 @@ margin: 0;
   margin-top: 80px;
 }
 
-.digits{
+.digits {
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  width: 1100px;
+  margin: 0 auto 0;
   justify-content: center;
 }
 
-.section__title{
-  padding-top: 100px;
+.section__title {
+  padding-top: 0;
   width: 60%;
   margin-bottom: 20px;
-  margin left: auto;
-  margin right: auto;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
 }
-.section__subtitle{
+.section__subtitle {
   width: 60%;
-  margin left: auto;
-  margin right: auto;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
-.table{
+.table {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   flex-direction: row;
   width: 1100px;
   margin-bottom: 100px;
-  padding-left: auto;
-  padding-right: auto;
 }
-.table__cell{
+
+.table__cell {
   width: 250px;
   margin-top: 60px;
 }
-.table__heading{
-  margin top: 0;
+.table__heading {
+  margin-top: 0;
   margin-bottom: 0;
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
 }
-.table__text{
+.table__text {
   margin-bottom: 0px;
   margin-top: 20px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
 }
-.feynman{
-  color: #f2f2f2;
-  height:890px;
-}
-.frayman__image{
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  height: 867px;
-  width: 637px;
-}
-.freyman__title{
+.feynman {
+  background-color: #f2f2f2;
+  height: 890px;
+  display: flex;
+  flex-direction: column;
+  background-image: url(../images/feynman.png);
+  background-position: left bottom;
+  background-size: 867px 637px;
+  background-repeat: no-repeat;
+  align-items: center;
+  justify-content: flex-start;
   padding-top: 100px;
-  width: 648px;;
+  position: relative;
+}
+
+.feynman__title {
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0;
+}
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+  margin-top: 70px;
+}
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+.table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin-top: 80px;
+  z-index: 1;
+}
+.section-title_theme_dark {
+  color: white;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+.section-subtitle_theme_dark {
+  color: white;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  overflow: hidden;
+}
+.kaufman__triangle {
+  display: flex;
+  width: 877px;
+  height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 0;
+}
+.footer {
+  padding-top: 60px;
+  padding-bottom: 40px;
+  min-height: 350px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  background-color: #1f1f1f;
+}
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+}
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 711px;
+  justify-content: space-between;
+}
+.footer__column_content_info {
+  display: flex;
+  flex-direction: column;
+}
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+}
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  margin: 18px 0;
+  font-weight: normal;
+  align-self: flex-start;
+  color: #ffffff;
+}
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0 0 20px;
+  padding: 0;
+  color: #ffffff;
+}
+.footer__column-links {
+  list-style-type: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0 0 16px;
+  padding: 0;
+  
+}
+.footer__columns {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__link {
+  color: #ffffff;
+  text-decoration: none;
+}
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
 }
